# Bionic-Neural-Network-Operating-System

./: .gitignore  Node_Generator_Guidelines_EN.md  README.md  README_CN.md  README_EN.md  create_node.py  python_create_node.py  requirements.txt  rust_create_node.py  节点生成器开发准则.md
data/: upper_data.json
node_python_demo/: config.json  listener.py  main.py  output.json  packet.py  requirements.txt  start.bat
node_rust_demo/: .gitignore  Cargo.toml  README.md  config.json  output.json  start.bat  start.sh
node_rust_demo/src/: listener.rs  main.rs  packet.rs
