[package]
name = "demo"
version = "0.1.0"
edition = "2021"
authors = ["BNOS Developer"]
description = "BNOS Rust Node - demo"

[[bin]]
name = "demo"
path = "src/main.rs"

[[bin]]
name = "demo_listener"
path = "src/listener.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
